# CG-Course

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/src/linalg/: Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
code/src/main/: main.cpp
pdf/: Course.aux  Course.tex  Untitled.aux  Untitled.out  Untitled.tex
